# manthana

./: .dockerignore  .env.example  .gitignore  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: pyproject.toml
agent/src/manthana/agent/: __init__.py  capture.py  cli.py  compact.py  config.py  datahome.py  insights.py  optimize.py  skillminer.py  sync.py  sync_client.py  watcher.py
agent/src/manthana/agent/actions/: dispatcher.py
agent/src/manthana/agent/compactor/: __init__.py  compactor.py  prompt.py
agent/src/manthana/agent/cost/: __init__.py  cost.py  rates.py
agent/src/manthana/agent/dashboard/: app.py
agent/src/manthana/agent/llm/: __init__.py  provider.py
agent/src/manthana/agent/redaction/: redactor.py
agent/src/manthana/agent/skillminer/: __init__.py  miner.py  provenance.py  skillmd.py  synthesize.py
agent/src/manthana/agent/store/: __init__.py  engine.py  migrations.py  store.py  tables.py
collectors/: pyproject.toml
collectors/src/manthana/collectors/: __init__.py  base.py  claude_code.py  codex.py  identity.py  project.py  sessionize.py
docs/: deploy.md
docs/report/: 00-executive-overview.md  01-system-architecture.md  02-data-pipeline.md  03-sequence-diagrams.md  04-trust-privacy-security.md  05-data-model.md  06-deployment-operations.md  07-engineering-decisions.md  08-status-and-roadmap.md  README.md
schemas/: pyproject.toml
schemas/json/: action.schema.json  action_audit_entry.schema.json  action_queue_item.schema.json  base_compaction.schema.json  consent_entry.schema.json  engineering_compaction.schema.json  friction_point.schema.json  session.schema.json  turn.schema.json
schemas/src/manthana/schemas/: __init__.py  action.py  compaction.py  consent.py  enums.py  export.py  friction.py  session.py  turn.py
server/: Dockerfile  pyproject.toml
server/src/manthana/server/: __init__.py  app.py  auth.py  cli.py  config.py  founder.py  llm.py  storage.py  store.py  tables.py  ui.py
skills/: pyproject.toml
skills/src/manthana/skills/: __init__.py  cluster.py  embed.py  miner.py  provider.py  synthesize.py
spec/: ECC_clone_instruction.md  manthana-action.md  manthana-architecture.md  manthana-decisions.md  manthana.md
tests/: test_agent_config.py  test_collector.py  test_compactor.py  test_cost.py  test_dashboard.py  test_optimize.py  test_personal_mode_invariant.py  test_redaction.py  test_review_fixes.py  test_schema_roundtrip.py  test_server.py  test_server_deploy.py  test_server_fixes.py  test_server_llm.py  test_server_skills.py  test_server_ui.py  test_skillminer.py  test_store.py  test_sync.py  test_team_e2e.py  test_watcher.py
tests/fixtures/claude_code/: sample-session.jsonl
