[project]
name = "manthana"
version = "0.1.0"
description = "Manthana local agent + CLI — local-first capture of AI coding interactions."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "manthana-schemas",
    "manthana-collectors",
    "typer>=0.12",
]

[project.scripts]
manthana = "manthana.agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manthana"]
