[project]
name = "manthana"
version = "0.1.0"
description = "Manthana local agent + CLI — local-first capture of AI coding interactions."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "manthana-schemas",
    "manthana-collectors",
    "typer>=0.12",
    "sqlmodel>=0.0.22",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Local vector store (sqlite-vec). Wired but optional; vector features are added
# in a later phase. Install with: uv sync --extra vec
vec = ["sqlite-vec>=0.1.3"]

[project.scripts]
manthana = "manthana.agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manthana"]
