[project]
name = "manthana-schemas"
version = "0.1.0"
description = "Manthana shared data schemas (Pydantic v2 + mirrored JSON Schema)."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["pydantic>=2.7"]

[project.scripts]
manthana-schemas-export = "manthana.schemas.export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manthana"]
