[project]
name = "manthana-skills"
version = "0.1.0"
description = "Manthana skill miner — cluster compactions into proposed SKILL.md (shared by agent + server)."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["manthana-schemas"]

[project.optional-dependencies]
# Semantic embeddings (bge-large via sentence-transformers). Heavy (torch); the
# miner falls back to a deterministic embedder without it.
embeddings = ["sentence-transformers>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manthana"]
